# klc-install

./: .gitignore  Cargo.toml  README.md
src/: get_known_folder.rs  main.rs  registry_key.rs  registry_value.rs  utils.rs
src/utils/: as_u16_slice.rs  move_file.rs  range_bounds_ext.rs  string_ext.rs  u16_iter.rs  utf16_lines.rs
